# Django-DRF-Clean-Architecture-Base

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: github-actions-cicd.yml
core/core/: settings.py
docker/: .dockerignore  Dockerfile  Dockerfile-dev  docker-compose-prod.yml  docker-compose-stage.yml  docker-compose.yml
envs/dev/backend/: .env
envs/dev/db/: .env
envs/prod/backend/: .env
envs/prod/db/: .env
envs/stage/backend/: .env
nginx/: default.conf
src/: manage.py  setup.cfg
src/application/: readme.md
src/application/dtos/: base.py
src/application/interfaces/: mapper.py  validators.py
src/application/permissions/: permissions.py
src/appplication/: readme.md
src/appplication/dtos/: base.py  user.py
src/appplication/interfaces/: generic_repository.py  mapper.py  validators.py
src/appplication/paginations/: paginations.py
src/appplication/permissions/: permissions.py
src/domain/: base.py  readme.md
src/domain/common/: models.py
src/domain/models/: user.py
src/infrastructure/: readme.md
src/infrastructure/celery/: celery.py
src/infrastructure/commands/: base.py
src/infrastructure/exceptions/: custom_handlers.py  exceptions.py
src/infrastructure/handlers/: base.py
src/infrastructure/locust/: locustfile.py
src/infrastructure/mapper/: mapper.py
src/infrastructure/middlewares/: ban.py  custom_exception_middleware.py  last_used_ip.py  unhandled_exceptions.py
src/infrastructure/repositories/: generic.py  (+1 more)
src/presentation/: readme.md
src/tests/: base.py
(+91 files in other folders)
